@@ -295,7 +295,11 @@ invoking the compiler.</p>
     <td valign="top">includeJavaRuntime</td>
     <td valign="top">Whether to include the default run-time
       libraries from the executing VM in the classpath;
-      defaults to <code>no</code>.</td>
+      defaults to <code>no</code>.<br/>
+      <b>Note:</b> In some setups the run-time libraries may be part
+      of the "Ant run-time libraries" so you may need to explicitly
+      set includeAntRuntime to false to ensure that the Java
+      run-time libraries are not included.</td>
     <td align="center" valign="top">No</td>
   </tr>
   <tr>
