@@ -66,7 +66,9 @@ public class Gcj extends DefaultCompilerAdapter {
 
         // gcj doesn't support an extension dir (-extdir)
         // so we'll emulate it for compatibility and convenience.
-        classpath.addExtdirs(extdirs);
+        if (extdirs != null || includeJavaRuntime) {
+            classpath.addExtdirs(extdirs);
+        }
 
         classpath.append(getCompileClasspath());
 
